--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1469,25 +1469,31 @@
 									<h2 style="text-align: center; margin-bottom: 30px;"><u>En Güvenilir İkinci El İlan Satıcıları</u></h2>
 
 									<div class="row">
+										
+										<% @enguvenilirikinciel.each do |user| %>
+										
+												<div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
 
-										<div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
+													<div class="thumbnail">
+														<a href="#"> <img src="resources/images/cat-demo.jpg"
+														alt="cat demo photo"> </img> </a>
+		
+													</div>
+		
+													<div class="caption">
+		
+														<h3><%= user.username %></h3>
+														<p>
+															Some sample text.
+														</p>
+		
+													</div>
+		
+												</div>
+												
+										<% end %>
 
-											<div class="thumbnail">
-												<a href="#"> <img src="resources/images/cat-demo.jpg"
-												alt="cat demo photo"> </img> </a>
-
-											</div>
-
-											<div class="caption">
-
-												<h3>Thumbnail label</h3>
-												<p>
-													Some sample text.
-												</p>
-
-											</div>
-
-										</div>
+										
 
 										<div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
 
