--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -232,10 +232,10 @@
 									</div><!-- /cbp-hrsub-inner -->
 								</div><!-- /cbp-hrsub -->
 							</li>
-							<li>
-								<a href="#">Ev Arkadaşı</a>
+							
+								<a href="/kategoriler/evarkadasi">Ev Arkadaşı</a>
 
-							</li>
+							
 
 							<li>
 								<a href="#">Özel Ders</a>
