--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -300,7 +300,7 @@
 			<div class="row"
 			style="height: 60%; padding-bottom: 20px; margin-bottom: 30px; margin-top: 20px;">
 
-				<div class="row" style="padding-left: 20px; padding-right: 20px;">
+				<div class="row" >
 
 					<div class="col-lg-3 hidden-xs hidden-sm hidden-md">
 
@@ -356,7 +356,7 @@
 					<br class="visible-sm visible-xs visible-md">
 
 					<div class="col-lg-9 col-md-12 col-sm-12 col-xs-12"
-					style="padding-left: 20px; padding-right: 20px">
+					style="">
 
 						<div style="">
 
@@ -383,14 +383,14 @@
 
 										<div class="caption">
 
-											<% if advert.name.length <= 13 %>
+											<% if advert.name.length <= 12 %>
 
 											<p><%= advert.name %></p>
 											
 
 											<% else %>
 
-											<p><%= advert.name[0..12] + "..." %></p>
+											<p><%= advert.name[0..11] + "..." %></p>
 
 											<% end %>
 
